fix: move footer spacing rules

--- a/packages/css/src/less/spacing.less
+++ b/packages/css/src/less/spacing.less
@@ -81,15 +81,3 @@
     margin-top: -@spacing-5-desktop / 2;
   }
 }
-
-.footer {
-  padding-top: @spacing-1-mobile;
-
-  @media (min-width: @screen-sm-min) {
-    padding-top: @spacing-1-tablet;
-  }
-
-  @media (min-width: @screen-lg-min) {
-    padding-top: @spacing-1-desktop;
-  }
-}
